--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "2.0.0(beta 1.0)"
-group = "com.naturalfauna.faunanatural" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = "1.2.0"
+group = "com.ikerleon.naturalfaunamod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "NaturalFauna Mod"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
